--- a/app/src/main/res/layout/layout_app_toolbar.xml
+++ b/app/src/main/res/layout/layout_app_toolbar.xml
@@ -4,7 +4,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     tools:context="com.flowercentral.flowercentralbusiness.dashboard.DashboardActivity">
 
     <android.support.design.widget.AppBarLayout
@@ -20,7 +20,5 @@
             app:popupTheme="@style/AppTheme.PopupOverlay"/>
 
     </android.support.design.widget.AppBarLayout>
-
-    <include layout="@layout/layout_content_home"/>
 
 </android.support.design.widget.CoordinatorLayout>
